<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login_activity"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/noContentDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_neuron_logo" />

    <TextView
        android:id="@+id/login_heading_neuron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="Neuron"
        android:textColor="@color/primary_light"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_logo"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/login_username_field_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_login_field"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_heading_neuron"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/noContentDescription"
            android:src="@drawable/ic_login_username"
            android:tint="@color/secondary" />

        <EditText
            android:id="@+id/login_username_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/username"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/login_text_color"
            android:textColorHint="@color/login_text_color"
            android:textSize="16sp"
            tools:ignore="Autofill"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_password_field_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_login_field"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_field_linear_layout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_lock_outlined"
            android:tint="@color/secondary"
            android:contentDescription="@string/noContentDescription"/>

        <EditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/login_text_color"
            android:textColorHint="@color/login_text_color"
            android:textSize="16sp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <TextView
        android:id="@+id/register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/register"
        android:textColor="@color/selector_color_registerhere"
        android:onClick="onClick_registerHere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field_linear_layout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/login_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:background="@drawable/background_login_sign_in_button"
        android:fontFamily="@font/comfortaa"
        android:text="@string/signin"
        android:textColor="@color/login_signin_button_text_color"
        android:textSize="18sp"
        android:onClick="onClick_signIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field_linear_layout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>